added code for bulk email upload